--- a/lp01.md
+++ b/lp01.md
@@ -7,4 +7,6 @@ El niño huérfano **Larry** vive con sus tiós que lo tratan bastante mal
 Tiene unas *Google Glasses* redondas y una cicatríz de un *USB* en la frente.
 
 Un día, aparece **Neo** , el de *Matrix* y le dice que él también puede ser un hacker.
-Así que lo saca de *Matris* y le lleva a una escuela de hacking.
+Así que lo saca de *Matrix* y le lleva a una escuela de hacking.
+
+Allí conoce a sus amigos **Ron** y *Versión** y vive sus primeras aventruas picando código.
