--- a/lp06.md
+++ b/lp06.md
@@ -1,6 +1,6 @@
 #Larry Plotter y El Misterio del Hacker (Ballmermort)
 
-**Larry** descubre un libro de ensamblador y compiladores que pertenece a un misterioso **hacker**.
 **Larry** descubre un libro de ensamblador y compiladores que pertenece a un misterioso *hacker*.
 A lo largo de la historia, **Ballmermort** est+a de todo el misterio.
+**Larry** y el director del colegio encuentran una nueva forma de combatirle.
 
